SeExpr: update resource creation and overwriting

The SeExpr preset management hadn't been updated to the new resource
system. It removes the need for cloning resources, and using Tiar's helpers
lets the resource system handle renames and updates.

Fixes https://krita-artists.org/t/help-krita-improve-with-structured-beta-testing-of-the-new-resource-system-in-krita-5-0/28779/28

BUG: 443079

This commit completes 126565fcee90ee516d6008fa797d6ecc279a5503.

Co-authored-by: Agata Cacko <tamtamy.tymona@gmail.com>